<resources>
    <!-- LOGIN -->
    <string name="app_name">ShoeStore</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_button_create_new_count">Create New Account</string>
    <string name="login_button_logging">Log In</string>
    <!-- WELCOME -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to my first App!</string>
    <string name="welcome_text_description">This is a App to create a new shoe</string>
    <string name="welcome_button_get_in">Get in</string>
    <!-- INSTRUCTIONS -->
    <string name="instructions_button_ready">I am ready</string>
    <string name="instructions_text">Instructions</string>
    <string name="instructions_text_description">This is a description of the instructions</string>
    <!-- SHOES LIST -->
    <string name="shoeslist">I am ready</string>
    <!-- ADD A NEW SHOE -->
    <string name="newshoe_name">Name</string>
    <string name="newshoe_company">Company</string>
    <string name="newshoe_size">Size</string>
    <string name="newshoe_description">Description</string>
    <string name="newshoe_button_save_shoe">Save shoe</string>
    <string name="newshoe_button_cancel">Cancel</string>


</resources>
